# caffe_classifier

./: .gitignore  CMakeLists.txt  README.md  deploy.prototxt  package.xml
src/: Classifier.cpp  Classifier.h  DemoInterface.cpp  DemoInterface.h  Labeling.h  caffe_classification.cpp  caffe_classification_server.cpp  caffe_classifier.cpp  main.cpp  sample.cpp  test_client.cpp  test_publisher.cpp
srv/: classify.srv
